--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
+blinker==1.9.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.1.8
 colorama==0.4.6
 contourpy==1.3.1
 cycler==0.12.1
 filelock==3.18.0
+Flask==3.1.0
 fonttools==4.57.0
 fsspec==2025.3.2
 gitdb==4.0.12
 GitPython==3.1.44
 idna==3.10
+itsdangerous==2.2.0
 Jinja2==3.1.6
 kiwisolver==1.4.8
 MarkupSafe==3.0.2
@@ -42,3 +46,4 @@ tzdata==2025.2
 ultralytics==8.3.105
 ultralytics-thop==2.0.14
 urllib3==2.3.0
+Werkzeug==3.1.3
