--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,12 @@ contourpy==1.3.1
 cycler==0.12.1
 filelock==3.18.0
 Flask==3.1.0
+Flask-SQLAlchemy==3.1.1
 fonttools==4.57.0
 fsspec==2025.3.2
 gitdb==4.0.12
 GitPython==3.1.44
+greenlet==3.2.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
@@ -20,6 +22,8 @@ matplotlib==3.10.1
 mpmath==1.3.0
 networkx==3.4.2
 numpy==2.1.1
+# Editable install with no version control (object_detection_metrics==0.1.0)
+-e c:\users\owner\documents\labsd\work\プログラム\object_detection_metrics
 opencv-python==4.11.0.86
 packaging==24.2
 pandas==2.2.3
@@ -36,6 +40,7 @@ seaborn==0.13.2
 setuptools==78.1.0
 six==1.17.0
 smmap==5.0.2
+SQLAlchemy==2.0.40
 sympy==1.13.1
 thop==0.1.1.post2209072238
 torch==2.6.0
